# sparse-ainv

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: FindMC64.cmake  FindMETIS.cmake  FindTBB.cmake
matlab/: ainv.m  ainv_testscript.m  ildl_testscript.m  inertia_blkdiag.m  iterapp.m  matrixtest_update_ainv.m  matrixtest_update_ildl.m  matrixtest_update_ildl_cpp.m  matrixtest_update_ildl_ilupack.m  mmread.m  spainv_sym_all.m  spainv_sym_grook.m  spainv_sym_mwn.m  spildl_sym_all.m
source/: bkp_pivoter.h  block_diag_matrix.h  block_diag_matrix_save.h  block_diag_matrix_to_string.h  default_pivoter.h  ldl_driver.cpp  lilc_matrix.h  lilc_matrix_ainv.h  lilc_matrix_ainv_helpers.h  lilc_matrix_declarations.h  lilc_matrix_find_level_set.h  lilc_matrix_find_root.h  lilc_matrix_load.h  lilc_matrix_save.h  lilc_matrix_sym_amd.h  lilc_matrix_sym_equil.h  lilc_matrix_sym_matching.h  lilc_matrix_sym_mc64.h  lilc_matrix_sym_metis.h  lilc_matrix_sym_perm.h  lilc_matrix_sym_rcm.h  lilc_matrix_to_string.h  pivot_strategy.h  set_unioner.h  solver.h  solver_minres.h  solver_sqmr.h  swap_struct.h  wmn_pivoter.h
test_matrices/: bcsstk20-pattern-rand.mtx  bcsstm06.mtx  test_kkt.mtx
